[tool.poetry]
name = "exporter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
pandas = "^2.1.4"
vlab-prepro = "0.4.0"
psycopg = {extras = ["binary"], version = "^3.1.16"}
pydantic = "1.10.10"
minio = "^7.2.0"
google-cloud-storage = "^2.14.0"
confluent-kafka = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
