[package]
name = "hermes"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "hermes"
path = "src/lib.rs"

[[bin]]
name = "hermes"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
